<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShadowFriends</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description_list_icon">Item Icon</string>
    <string name="str_atv_places">Enter place</string>
    <string name="sensitivity">Sensitivity\n(lower = more sensitive)</string>
    
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <string name="app_id">1397110090516441</string>
    
    <string-array name="nav_drawer_items">
        <item >Safe Zone</item>
        <item >Danger Map</item>
        <item >Raise Voice</item>
        <item >Walk With Me Request</item>
        <item >Walk With Me</item>
        <item >Track Me</item>
        <item >Emergency Settings</item>
        <item >Secret Eye</item>
        <item >Harassment Statistics</item>
        <item >Basic Info</item>
        <item >FIR</item>
        <item >Survey</item>
        <item >Logout</item>
    </string-array>
    
    <!-- List Item Icons(Images) with strings(text of company name) -->
    <array name="nav_drawer_icons">
        <item>@drawable/safe_zone</item>
        <item>@drawable/danger</item>
        <item>@drawable/raise</item>
        <item>@drawable/wwm1</item>
        <item>@drawable/wwm</item>
        <item>@drawable/track</item>
        <item>@drawable/emergency_d</item>
        <item>@drawable/evidence</item>
        <item>@drawable/stat</item>
        <item>@drawable/info</item>
        <item>@drawable/info</item>
        <item>@drawable/survey</item>
        <item>@drawable/logout</item>
    </array>

    
        <string name="titlePost">Story of Victims</string>
    <string name="comment">Your Comment: </string>

    <string name="question_option">women are mostly victim </string>
    <string name="question_next">Next </string>
    <string name="question_previous">Previous </string>
    


    <string name="required">Required</string>

    <string name="post_prompt">Select a category</string>
    <string-array name="post_type_arrays">
        <item>Suggestion</item>
        <item>Incidents</item>
        <item>Awareness</item>


    </string-array>

    
     <string name="comment">When you mostly face harassment? </string>

    <string name="question_option">women  </string>

    <string name="question_option1">Day </string>
    <string name="question_option2">Night </string>
    <string name="question_option3">Noon </string>

    <string name="question_next">Next </string>
    <string name="question_previous">Previous </string>
    
    
</resources>
